--- a/unoapp/templates/unoapp/index.html
+++ b/unoapp/templates/unoapp/index.html
@@ -33,6 +33,21 @@ td{
     align-self: center;
 }
 
+
+
+a.my:link, a.my:visited {
+  background-color: black;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a.my:hover, a.my:active {
+  background-color: blue;
+}
+
 /* rank name score oldrate newrate delta
 	10   40   20     10      10     10
   */
@@ -73,16 +88,16 @@ table{
 	{% for p in profiles %}
 	<tr> 
 		
-		{% if p.rating >= 1700 %}
-        <td style="color: red; font-weight: bold">{{ p.name }}</td>
+		{% if p.rating >= 1650 %}
+        <td ><a href="{% url 'profile' user_id=forloop.counter0 %}" style="color: red; font-weight: bold; display: block; ">{{p.name}}</a></td>
         {% elif p.rating >= 1600 %}
-		<td style="color: orange; font-weight: bold">{{ p.name }}</td>
-        {% elif p.rating >= 1550 %}
-		<td style="color: blue; font-weight: bold">{{ p.name }}</td>
+		<td ><a href="{% url 'profile' user_id=forloop.counter0 %}" style="color: orange; font-weight: bold;display: block;">{{p.name}}</a></td>
         {% elif p.rating >= 1500 %}
-        <td style="color: green; font-weight: bold">{{ p.name }}</td>
+		<td ><a href="{% url 'profile' user_id=forloop.counter0 %}" style="color: blue; font-weight: bold;display: block;">{{p.name}}</a></td>
+        {% elif p.rating >= 1400 %}
+        <td ><a href="{% url 'profile' user_id=forloop.counter0 %}" style="color: green; font-weight: bold;display: block;">{{p.name}}</a></td>
         {% else %}
-		<td style="color: #5d5d5d; font-weight: bold">{{ p.name }}</td>
+		<td ><a href="{% url 'profile' user_id=forloop.counter0 %}" style="color: #5d5d5d; font-weight: bold;display: block;">{{p.name}}</a></td>
         {% endif %}
    
         <td>{{ p.rating }}</td>
@@ -104,8 +119,20 @@ table{
 <br>
 <hr>
 
+<table class = "table table-hover">
+	<tr>
+{% for p in profiles %}
+<td><a class = "my" href="{% url 'profile' user_id=forloop.counter0 %}">{{p.name}}</a></td>
+{% endfor %}
+<tr>
+</table>
 
+<hr>
+<br>
+<br>
+<hr>
 
+<!-- 
 {% for p in profiles %}
 <div align="center" style=" background-color: #AEB6BF ; margin-bottom: 1px; padding: 2px "><b> {{ p.name }}</b> </div>
 <div class="ok">
@@ -145,13 +172,10 @@ table{
 </div>
 {% endfor %}
 
-
-
-
 <hr>
 <br>
 <br>
-<hr>
+<hr> -->
 
 <div class="container-fluid">
 	<div align="center" style=" background-color: #AEB6BF ; margin-bottom: 1px; padding: 2px "><b> Total Games : {{rating.games|length }}</b> </div>
