created UI for inserting scores

--- a/unoapp/templates/unoapp/index.html
+++ b/unoapp/templates/unoapp/index.html
@@ -365,5 +365,7 @@ table{
     });
 </script>
 <hr>
-<!-- <a href="/unoapp/newgame.html">new game</a> -->
+<div style="text-align:right">
+<a class = "my" href="{% url 'newgame' %}" style="text-align: center;"  >New Game</a>
+</div>
 </body>
