--- a/unoapp/templates/unoapp/newgame.html
+++ b/unoapp/templates/unoapp/newgame.html
@@ -1,8 +1,63 @@
-<form method="post" enctype="multipart/form-data" action="/newGame/">
-{% csrf_token %}
-   <input type="number" name="Daddy">
-   <input type="number" name="Mummy">
-    <input type="number" name="Parvindar">
-    <input type="number" name = "Ricky">
-    <input type="submit" value="ok">
+<head><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<style>
+th,td{
+  /*padding: 20px;*/
+  text-align: center;
+}
+
+th{
+	font-weight: bold;
+}
+td{
+	font-weight: 100;
+}
+
+
+.my {
+  background-color: black;
+  color: white;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.my:hover{
+  background-color: blue;
+}
+
+.container-fluid{
+	width: 80%
+}
+
+
+
+</style>
+
+</head>
+<div style="text-align: center;padding-top: 5px; background: black">
+<h2 style="color: white" ><b> Insert Scores </b> </h2>
+</div>
+<hr>
+
+<br>
+<br>
+<hr>
+
+<form action="newgame" method="post">
+    {% csrf_token %}
+<div class="container-fluid">
+<table class="table table-hover">
+    <thead class = "thead-dark">
+	<th>Name</th>
+	<th>Score</th>
+    </thead>
+    {{ form.as_table }}
+</table>
+</div>
+<div style="text-align: center;">
+    <input type="submit" value="Submit" class="my">
+</div>
+<hr>
 </form>
